tests/transpiler/x/php/fun_expr_in_let.error
run: exit status 255

Fatal error: Uncaught Error: Call to undefined function square() in /workspace/mochi/tests/transpiler/x/php/fun_expr_in_let.php:5
Stack trace:
#0 {main}
  thrown in /workspace/mochi/tests/transpiler/x/php/fun_expr_in_let.php on line 5
